--- a/src/index.css
+++ b/src/index.css
@@ -10,16 +10,23 @@ body {
   padding: 0;
 }
 
-.imge {
-  position: absolute;
+canvas {
   width: 100%;
   height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
-.imge1 {
-  width: 12.5%;
-  height: 24.5%;
-  opacity: 20%;
+/* Hide scrollbar and keep functionality for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .clock {
@@ -41,5 +48,4 @@ body {
   width: 100%;
   text-align: center;
   position: absolute;
-  /* z-index: 100; */
 }
