--- a/src/index.css
+++ b/src/index.css
@@ -10,13 +10,23 @@ body {
   padding: 0;
 }
 
-canvas {
+#canvas {
   width: 100%;
   height: 100%;
   position: fixed;
   top: 0;
   left: 0;
   z-index: -1;
+}
+#canvas2 {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  /* blocked events below this canvas */
+  pointer-events: none;
 }
 
 /* Hide scrollbar and keep functionality for Chrome, Safari and Opera */
@@ -30,6 +40,7 @@ canvas {
 }
 
 .clock {
+  z-index: 1;
   color: #21222c;
   position: absolute;
   margin: 0;
@@ -39,6 +50,7 @@ canvas {
 }
 
 .name {
+  z-index: 1;
   background-position: 0% top;
   /* background: -webkit-linear-gradient(#8be9fd, #bd93f9); */
   background: linear-gradient(to bottom, #8be9fd 12%, #bd93f9 60%);
