--- a/src/index.css
+++ b/src/index.css
@@ -4,29 +4,14 @@
   font-family: "Noto Sans Mono", monospace;
 }
 
+html,
 body {
   cursor: none;
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
-}
-
-#canvas {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-#canvas2 {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 2;
-  /* blocked events below this canvas */
-  pointer-events: none;
+  background-color: #21222c;
 }
 
 /* Hide scrollbar and keep functionality for Chrome, Safari and Opera */
@@ -39,6 +24,26 @@ body {
   scrollbar-width: none; /* Firefox */
 }
 
+#canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 2;
+}
+#canvas2 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  /* blocked events below this canvas */
+  pointer-events: none;
+}
+
 .clock {
   z-index: 1;
   color: #21222c;
@@ -49,8 +54,57 @@ body {
   text-align: right;
 }
 
-.name {
+#loopcover {
+  pointer-events: none;
+  width: 60%;
+  height: 100%;
+  position: fixed;
+  padding: 5%;
+  z-index: 2;
+  /* background-color: #21222c; */
+  /* background: -moz-linear-gradient(top, #21222c00 0%, #21222cff 70%); */
+  /* background: -webkit-gradient( */
+  /*   linear, */
+  /*   left top, */
+  /*   left bottom, */
+  /*   color-stop(0%, #21222c00), */
+  /*   color-stop(70%, #21222cff) */
+  /* ); */
+  /* background: -webkit-linear-gradient( */
+  /*   top, */
+  /*   rgba(255, 255, 255, 0) 0%, */
+  /*   rgba(255, 255, 255, 1) 70% */
+  /* ); */
+  /* background: -o-linear-gradient( */
+  /*   top, */
+  /*   rgba(255, 255, 255, 0) 0%, */
+  /*   rgba(255, 255, 255, 1) 70% */
+  /* ); */
+  /* background: -ms-linear-gradient( */
+  /*   top, */
+  /*   rgba(255, 255, 255, 0) 0%, */
+  /*   rgba(255, 255, 255, 1) 70% */
+  /* ); */
+  background: linear-gradient(
+    to bottom,
+    #21222cff 55%,
+    /* #21222ca0 80%, */ #21222c00 75%,
+    #21222c80 95%,
+    #21222cf0 100%
+  );
+}
+
+#loopcontent {
   z-index: 1;
+  top: 60%;
+  padding: 5%;
+  height: 40%;
+  width: 60%;
+  position: absolute;
+  overflow-y: scroll;
+}
+
+.name {
   background-position: 0% top;
   /* background: -webkit-linear-gradient(#8be9fd, #bd93f9); */
   background: linear-gradient(to bottom, #8be9fd 12%, #bd93f9 60%);
@@ -58,14 +112,16 @@ body {
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
+  padding-top: 10%;
+  padding-bottom: 10%;
 
   /* color: #bd93f9; */
+  display: block;
   margin: 0;
-  top: 82%;
-  left: 30%;
-  transform: translate(-50%, -50%);
+  /* transform: translate(-50%, -50%); */
   font-size: 60px;
-  width: 50%;
   text-align: center;
-  position: absolute;
+  position: relative;
+  top: 0;
+  left: 0;
 }
