--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
-  background-color: #21222c;
+  /* background-color: #21222c; */
 }
 
 /* Hide scrollbar and keep functionality for Chrome, Safari and Opera */
@@ -29,7 +29,7 @@ body {
   top: 0;
   left: 0;
   pointer-events: none;
-  z-index: 2;
+  z-index: -1;
 }
 #canvas2 {
   position: fixed;
@@ -88,12 +88,20 @@ h1 {
   top: 0;
   left: 0;
 }
+.name {
+  text-align: left;
+  padding-left: 1%;
+  padding-top: 1%;
+  -webkit-text-stroke-width: 0.06vw;
+  -webkit-text-stroke-color: #8be9fd;
+}
 .clock {
   z-index: 1;
   color: #21222c;
   position: absolute;
   margin: 0;
   width: 100%;
-  right: 1%;
-  text-align: left;
+  top: 100%;
+  transform: translate(-1%, -100%);
+  text-align: right;
 }
