--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,55 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@500&display=swap");
 
+/* Hide scrollbar and keep functionality for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
+}
 * {
+	/* include padding and border in width/height calculations */
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+
+/* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+
   font-family: "Noto Sans Mono", monospace;
+}
+
+:root {
+	--bg-color: #21222c;
+	--border-color: #50fa7b;
+	/* --border-color: #f1fa8c; */
+	--text-color: #8be9fd;
+	--text-fade: #bd93f9;
+}
+:focus {
+    /* outline-color: var(--border-color); */
+    /* box-shadow: 0 0 10px #719ECE; */
+}
+/* ::-moz-selection { /1* Code for Firefox *1/ */
+/*   color: red; */
+/*   background: yellow; */
+/* } */
+
+/* ::selection { */
+/*   color: red; */
+/*   background: yellow; */
+/* } */
+
+:hover {
+    cursor: none;
 }
 
 html,
 body {
+	overflow: hidden;
   cursor: none;
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
   /* background-color: #21222c; */
-}
-
-/* Hide scrollbar and keep functionality for Chrome, Safari and Opera */
-::-webkit-scrollbar {
-  display: none;
-}
-/* Hide scrollbar for IE, Edge and Firefox */
-* {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
 }
 
 #canvas {
@@ -40,80 +68,92 @@ body {
   pointer-events: none;
 }
 
-#loopcover {
-	border-radius: 25px;
-	border: 3px solid #50fa7b;
-  pointer-events: none;
-  left: 8%;
-  width: 48%;
-  top: 60%;
-  height: 40%;
-  position: fixed;
-  z-index: 2;
-  /* background: linear-gradient( */
-  /*   to bottom, */
-  /*   #21222cfa 5%, */
-  /*   #21222cf0 10%, */
-  /*   /1* #21222ca0 80%, *1/ #21222c00 30%, */
-  /*   /1* #21222ca0 80%, *1/ #21222c00 70%, */
-  /*   #21222cf0 90%, */
-  /*   #21222cfa 95% */
-  /* ); */
-}
-#loopcontent {
-  z-index: 1;
-  top: 60%;
-  left: 10%;
-  height: 40%;
-  width: 44%;
-  position: absolute;
-  overflow: auto;
-  -webkit-overflow-scrolling: touch;
-}
-
 h1 {
   background-position: 0% top;
-  /* background: -webkit-linear-gradient(#8be9fd, #bd93f9); */
-  background: linear-gradient(to bottom, #8be9fd 40%, #bd93f9 60%);
+  background: linear-gradient(to bottom, var(--text-fade) 40%, var(--text-color) 60%);
   -webkit-background-clip: text;
   -moz-background-clip: text;
   -webkit-text-fill-color: transparent;
   -moz-text-fill-color: transparent;
-
-  /* color: #bd93f9; */
-  /* display: block; */
   margin: 0;
-  /* transform: translate(-50%, -50%); */
   font-size: 4.2vw;
   text-align: center;
-  /* position: relative; */
-  top: 0;
-  left: 0;
 }
 
-p {
-	text-align: center;
-	color: #8be9fd;
-	font-size: 1.3vw;
+@keyframes off {
+  0% {
+		box-shadow:
+		0 0 2px #fff,
+		0 0 5px #fff,
+		0 0 10px #fff,
+		0 0 20px var(--border-color),
+		0 0 40px var(--border-color),
+		0 0 45px var(--border-color),
+		0 0 50px var(--border-color),
+		0 0 75px var(--border-color),
+		inset 0 0 1.4rem var(--border-color);
+  }
+  100% {
+		box-shadow:
+		0 0 1px #fff,
+		0 0 2px #fff,
+		0 0 3px #fff,
+		0 0 5px var(--border-color),
+		0 0 22px var(--border-color),
+		0 0 28px var(--border-color),
+		0 0 35px var(--border-color),
+		0 0 40px var(--border-color),
+		inset 0 0 1.0rem var(--border-color);
+	}
+}
+@keyframes on {
+  100% {
+		box-shadow:
+		0 0 2px #fff,
+		0 0 5px #fff,
+		0 0 10px #fff,
+		0 0 20px var(--border-color),
+		0 0 40px var(--border-color),
+		0 0 45px var(--border-color),
+		0 0 50px var(--border-color),
+		0 0 75px var(--border-color),
+		inset 0 0 1.4rem var(--border-color);
+  }
+  0% {
+		box-shadow:
+		0 0 1px #fff,
+		0 0 2px #fff,
+		0 0 3px #fff,
+		0 0 5px var(--border-color),
+		0 0 22px var(--border-color),
+		0 0 28px var(--border-color),
+		0 0 35px var(--border-color),
+		0 0 40px var(--border-color),
+		inset 0 0 1.0rem var(--border-color);
+	}
 }
 
+#nameWrapper {
+	position: absolute;
+	/* to have sime size as child element */
+	height: fit-content;
+	background-color: var(--bg-color);
+	border-radius: 25px;
+	border: 3px solid #fff;
+	width: 22ex;
+  font-size: 3.0vw;
+}
 
 .name {
-	border-radius: 25px;
-	border-bottom: 3px solid #50fa7b;
-	border-right: 3px solid #50fa7b;
-  text-align: left;
-  padding-top: 1%;
-  -webkit-text-stroke-width: 0.06vw;
-  -webkit-text-stroke-color: #8be9fd;
+  text-align: center;
+  /* padding-top: 1%; */
+	font-size: 100%;
 	white-space: pre;
-	position:absolute;
 }
 
 
 .clock {
   z-index: 1;
-  color: #21222c;
   position: absolute;
   margin: 0;
   width: 100%;
@@ -124,29 +164,71 @@ p {
   /* -webkit-text-stroke-color: #8be9fd; */
 }
 
+.animate-on {
+	animation: on 0.7s forwards;  
+}
+
+.animate-off {
+	animation: off 0.7s forwards;
+}
+
+#loopcontent {
+	padding-left: 1%;
+	padding-right: 1%;
+	border-radius: 25px;
+	border: 3px solid #fff;
+	background-color: var(--bg-color);
+	font-size: 1.3vw;
+  z-index: 1;
+  top: 60%;
+  left: 8%;
+  height: 40%;
+  width: 44%;
+  position: absolute;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+	text-align: center;
+	color: var(--text-color);
+}
+
+input {
+	font-size: 1.3vw;
+	color: var(--text);
+}
+
+input[type=text] {
+	width: 100%;
+	border: none;
+  border-bottom: 2px solid var(--text-fade);
+	background-color: transparent;
+	text-align: center;
+}
+
+input[type=submit] {
+	margin-top: 1%;
+	padding: 1%;
+	right: 0;
+	background-color: transparent;
+	text-align: center;
+	border-radius: 25px;
+	border: 3px solid var(--text-fade);
+}
+
 @media only screen and (max-width: 768px) {
-  .name {
-  	text-align: center;
-		border: 3px solid #50fa7b;
-		right: 0;
-		top: 46%;
-  	-webkit-text-stroke-color: #bd93f9;
-  	-webkit-text-stroke-width: 0.3vw;
-  }
 	h1 {
+		font-size: 10vw;
+	}
+	#nameWrapper {
+		transform: translate(50%, -50%);
+		right: 50%;
+		top: 50%;
 		font-size: 8vw;
 	}
-	p {
-		font-size: 5vw;
-	}
-	#loopcover {
-		width: 100%;
-		left: 0;
-		border-top: 3px solid #50fa7b;
-		border-left: none;
-		border-right: none;
+	input {
+		font-size: 1.3vw;
 	}
 	#loopcontent {
+		font-size: 5vw;
 		width: 100%;
 		left: 0;
 	}
@@ -157,5 +239,3 @@ p {
 		font-size: 3vh;
 	}
 }
-
-
