--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,31 @@ body {
   pointer-events: none;
 }
 
+.downarrow {
+	margin-top: 1vw;
+	width: auto;
+	height: 2.5em;
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
+/* .content { */
+/* 	position: relative; */
+/* } */
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-1vw);
+  }
+  60% {
+    transform: translateY(-0.5vw);
+  }
+}
+
 h1 {
   background-position: 0% top;
   background: linear-gradient(to bottom, var(--text-fade) 40%, var(--text-color) 60%);
@@ -205,7 +230,7 @@ input[type=text] {
 }
 
 input[type=submit] {
-	margin-top: 1%;
+	margin-top: 3%;
 	padding: 1%;
 	right: 0;
 	background-color: transparent;
