Add: scroll hover Animation + some minor tweaks

--- a/src/index.css
+++ b/src/index.css
@@ -71,15 +71,13 @@ body {
 .downarrow {
 	margin-top: 1vw;
 	width: auto;
-	height: 2.5em;
-  -moz-animation: bounce 2s infinite;
-  -webkit-animation: bounce 2s infinite;
-  animation: bounce 2s infinite;
+	height: 2.2em;
+	animation: bounce 2s 3;
 }
 
-/* .content { */
-/* 	position: relative; */
-/* } */
+.bounce {
+  animation: bounce 2s infinite;
+}
 
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
@@ -160,6 +158,8 @@ h1 {
 
 #nameWrapper {
 	position: absolute;
+	/* top: 4%; */
+	/* left: 2%; */
 	/* to have sime size as child element */
 	height: fit-content;
 	background-color: var(--bg-color);
@@ -190,11 +190,11 @@ h1 {
 }
 
 .animate-on {
-	animation: on 0.7s forwards;  
+	animation: on 0.6s forwards;  
 }
 
 .animate-off {
-	animation: off 0.7s forwards;
+	animation: off 0.6s forwards;
 }
 
 #loopcontent {
@@ -217,22 +217,25 @@ h1 {
 }
 
 input {
+	width:100%;
 	font-size: 1.3vw;
 	color: var(--text);
 }
 
 input[type=text] {
-	width: 100%;
+	width: 45%;
+	margin-left: 5%;
 	border: none;
   border-bottom: 2px solid var(--text-fade);
 	background-color: transparent;
-	text-align: center;
+	text-align: right;
 }
 
 input[type=submit] {
-	margin-top: 3%;
+	width: 20%;
+	margin-left: 1%;
+	margin-right: 29%;
 	padding: 1%;
-	right: 0;
 	background-color: transparent;
 	text-align: center;
 	border-radius: 25px;
