--- a/src/index.css
+++ b/src/index.css
@@ -219,7 +219,7 @@ h1 {
   }
 }
 
-#loopcontent {
+#loop {
 	padding-left: 1%;
 	padding-right: 1%;
 	border-radius: 20px;
@@ -236,6 +236,9 @@ h1 {
   -webkit-overflow-scrolling: touch;
 	text-align: center;
 	color: var(--text-color);
+}
+.loopcontent {
+	height: 720px;
 }
 
 input {
