--- a/src/index.css
+++ b/src/index.css
@@ -174,11 +174,22 @@ h1 {
 	animation: off 0.6s forwards;
 }
 
+#line {
+	position: absolute;
+	top: 65%;
+	left: 51.8%;
+	height: 30%;
+	width: 5%;
+}
+
 #uparrow {
 	position: absolute;
 	height: 8%;
 	top: 72%;
 	left: 52%;
+}
+#uparrow:active {
+  transform: translateY(-3vw);
 }
 
 #downarrow {
@@ -187,36 +198,8 @@ h1 {
 	left: 52%;
 	bottom: 12%;
 }
-
-.bounceDown {
-  animation: bounceDown 2s 1;
-}
-
-@keyframes bounceDown {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(1vw);
-  }
-  60% {
-    transform: translateY(0.5vw);
-  }
-}
-.bounceUp {
-  animation: bounceUp 2s 1;
-}
-
-@keyframes bounceUp {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(-1vw);
-  }
-  60% {
-    transform: translateY(-0.5vw);
-  }
+#downarrow:active {
+  transform: translateY(3vw);
 }
 
 #loop {
