--- a/src/index.css
+++ b/src/index.css
@@ -43,9 +43,9 @@
 
 html,
 body {
-	overflow: hidden;
+	/* overflow: hidden; */
   cursor: none;
-  height: 100%;
+  height: 130.5%;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -135,10 +135,11 @@ h1 {
 
 #nameWrapper {
 	position: absolute;
-	/* top: 4%; */
-	/* left: 2%; */
 	/* to have sime size as child element */
 	height: fit-content;
+	transform: translate(50%, -50%);
+	right: 50%;
+	top: 50%;
 	background-color: var(--bg-color);
 	border-radius: 20px;
 	border: 3px solid #fff;
@@ -178,7 +179,7 @@ h1 {
 	position: absolute;
 	width: 10%;
 	height: 20%;
-	top: 80%;
+	top: 150%;
 	transform: translateY(-50%);
 	left: 50%;
 }
@@ -240,7 +241,7 @@ h1 {
 	background-color: var(--bg-color);
 	font-size: 1.3vw;
   z-index: 1;
-  top: 60%;
+	top: 130%;
   left: 8%;
   height: 40%;
   width: 42%;
@@ -285,9 +286,6 @@ input[type=submit] {
 		font-size: 10vw;
 	}
 	#nameWrapper {
-		transform: translate(50%, -50%);
-		right: 50%;
-		top: 50%;
 		font-size: 8vw;
 	}
 	input {
