--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ html,
 body {
 	/* overflow: hidden; */
   cursor: none;
-  height: 130.5%;
+  height: 141.5%;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -154,7 +154,6 @@ h1 {
 	white-space: pre;
 }
 
-
 .clock {
   z-index: 1;
   position: absolute;
@@ -175,15 +174,6 @@ h1 {
 	animation: off 0.6s forwards;
 }
 
-#loopcontrolls {
-	position: absolute;
-	width: 10%;
-	height: 20%;
-	top: 150%;
-	transform: translateY(-50%);
-	left: 50%;
-}
-
 #line {
 	height: 26%;
 	width: 5%;
@@ -198,14 +188,15 @@ h1 {
 	margin-top: -7%;
 	transition: 1s ease-in-out;
 }
-#downarrow:active + #circlearrow {
-  transform: rotate(-360deg);
+#downarrow:active #circlearrow {
+  transform: rotate(360deg);
 }
 #uparrow:active + #circlearrow {
-  transform: rotate(360deg);
+  transform: rotate(-360deg);
 }
 
 #uparrow {
+	visibility: hidden;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
@@ -233,6 +224,15 @@ h1 {
   transform: translateY(2vw);
 }
 
+#loopcontrolls {
+	position: absolute;
+	width: 10%;
+	height: 20%;
+	top: 180%;
+	transform: translateY(-50%);
+	left: 50%;
+}
+
 #loop {
 	padding-left: 1%;
 	padding-right: 1%;
@@ -241,7 +241,7 @@ h1 {
 	background-color: var(--bg-color);
 	font-size: 1.3vw;
   z-index: 1;
-	top: 130%;
+	top: 160%;
   left: 8%;
   height: 40%;
   width: 42%;
@@ -253,6 +253,18 @@ h1 {
 }
 .loopcontent {
 	height: 720px;
+}
+
+#scrolldown {
+	position: absolute;
+	left: 50%;
+	top: 90%;
+	transform: translate(-50%, -50%);
+	visibility: hidden;
+	transition: 0.1s ease-in-out;
+}
+#scrolldown:hover {
+  transform: translate(-50%, -45%);
 }
 
 input {
