--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,10 @@ h1 {
     text-align: center;
 }
 
+a {
+    color: var(--border-color);
+}
+
 @keyframes off {
     0% {
         box-shadow: 0 0 2px #fff, 0 0 5px #fff, 0 0 10px #fff, 0 0 20px var(--border-color), 0 0 40px var(--border-color), 0 0 45px var(--border-color), 0 0 50px var(--border-color), 0 0 75px var(--border-color), inset 0 0 1.4rem var(--border-color);
@@ -128,15 +132,8 @@ h1 {
     background-color: var(--bg-color);
     border-radius: 20px;
     border: 3px solid #fff;
-    width: 22ex;
+    width: 30ex;
     font-size: 3vw;
-}
-
-.name {
-    text-align: center;
-    /* padding-top: 1%; */
-    font-size: 100%;
-    white-space: pre;
 }
 
 .clock {
@@ -173,11 +170,11 @@ h1 {
     margin-top: -7%;
     transition: 1s ease-in-out;
 }
-#downarrow:active #circlearrow {
-    transform: rotate(360deg);
+#downarrow:active + #circlearrow {
+    transform: rotate(-360deg);
 }
 #uparrow:active + #circlearrow {
-    transform: rotate(-360deg);
+    transform: rotate(360deg);
 }
 
 #uparrow {
